crates/toml_edit/tests/snapshots/invalid/array/no-close-02.stderr
TOML parse error at line 1, column 19
  |
1 | no-close-02 = [1,
  |                   ^
unclosed array, expected `]`
